# Parallel_programming_labs

./: .gitignore  README.md
lab 1/: CMakeLists.txt  main.cpp
lab 2/: CMakeLists.txt  main.cpp
lab 3/: CMakeLists.txt  graph.cpp  graph.h  graph_algs.cpp  graph_algs.h  graph_types.h  main.cpp
lab 4/: CMakeLists.txt  main.cpp
lab 6/: CMakeLists.txt  main.cpp
lab 6/animal/: animal.cpp  animal.h
lab 7/: CMakeLists.txt  database.cpp  database.h  main.cpp
lab 8/: CMakeLists.txt  barrier.cpp  barrier.h  main.cpp  matrix.h
lab 9/: CMakeLists.txt
lab 9/l1/: CMakeLists.txt  main.cpp
lab 9/l1/modules/src/: array_gcd.cpp
lab 9/l2/: CMakeLists.txt  main.cpp
lab 9/l2/modules/: dfs.cpp
lab 9/l8/: CMakeLists.txt  main.cpp  matrix.cpp
lab 9/l8/modules/: player.cpp  referee.cpp
lab 9/lab 2/: CMakeLists.txt
lab 9/lab 8/: CMakeLists.txt
